k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: calvinyhu/docker-kubernetes-complex-worker
          # No ports required since no other objects in the cluster are going to need access to the worker
          # The worker only needs access to the redis container
          # Therefore, no service config is required for the worker deployment
