k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # This tells k8s that we want to setup an nginx controller
    nginx.ingress.kubernetes.io/use-regex: "true" # Requires quotes
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*) # Send requests that match / to the set of pods governed by client-cluster-ip-service
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*) # Send requests that match /api to the set of pods governed by server-cluster-ip-service
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
